modified:   .vscode/launch.json 	new file:   OOP_LAB2/Arbalester.java 	new file:   OOP_LAB2/Cleric.java 	new file:   OOP_LAB2/Fighter.java 	new file:   OOP_LAB2/Hawkeye.java 	new file:   OOP_LAB2/Human.java 	new file:   OOP_LAB2/Names.java 	new file:   OOP_LAB2/Peasant.java 	modified:   OOP_LAB2/Program.java 	new file:   OOP_LAB2/RandomFactoryHuman.java 	new file:   OOP_LAB2/Rogue.java 	new file:   OOP_LAB2/Warlock.java 	new file:   OOP_LAB2/Warlord.java 	new file:   OOP_LAB2/Wizard.java 	new file:   OOP_LAB2/humanFactory.java 	new file:   OOP_LAB2/interfaceGame.java 	modified:   oop_lab1/Human.java 	new file:   oop_lab3/Names.java 	new file:   oop_lab3/Program.java 	new file:   oop_lab3/RandomFactoryHuman.java 	new file:   oop_lab3/humanFactory.java 	new file:   oop_lab3/human_classes/Arbalester.java 	new file:   oop_lab3/human_classes/Cleric.java 	new file:   oop_lab3/human_classes/Fighter.java 	new file:   oop_lab3/human_classes/Hawkeye.java 	new file:   oop_lab3/human_classes/Human.java 	new file:   oop_lab3/human_classes/Peasant.java 	new file:   oop_lab3/human_classes/Rogue.java 	new file:   oop_lab3/human_classes/Warlock.java 	new file:   oop_lab3/human_classes/Warlord.java 	new file:   oop_lab3/human_classes/Wizard.java 	new file:   oop_lab3/interfaceGame.java