@@ -1,159 +1,121 @@
-package OOP_LAB2;
+package oop_lab2;
+import java.util.List;
+import java.util.Arrays;
+import java.util.Random;
+import java.util.ArrayList;
 
-// Доработать дерево классов так, чтобы экземпляры классов создавались конструктором с именем в параметре 
-// а остальные параметры инициализировали сами в зависимости от персонажа.
-// Добавить файл интерфейса в котором описать два метода, void step(); и String getInfo();
-// Добавить реализацию интерфейса в ваш коренной абстрактный класс. 
-// Переопределить getInfo так, чтобы он возвращал строки:"Я крестьянин", "Я снайпер" и так далее в зависимости от типа персонажа.
-// В основном классе создать список и добавить в него 10 случаных персонажей. Пройти по списку и вывести строку возвращаемую getInfo.
+import java.lang.Class;
+import java.lang.reflect.*;
 
 
-// https://repo1.maven.org/maven2/org/openjdk/jol/
-//библиотеки цепляются к проекту в java project -> ref libs
-//позволяет анализировать структуру обьектов https://www.baeldung.com/java-memory-layout
-import org.openjdk.jol.info.ClassLayout;//https://repo1.maven.org/maven2/org/openjdk/jol/jol-core/0.16/
-import org.openjdk.jol.vm.VM;
+// Доработать дерево классов так, чтобы экземпляры классов создавались конструктором 
+// с именем в параметре а остальные параметры инициализировали сами в зависимости от персонажа. 
+// Добавить файл интерфейса в котором описать два метода, void step(); и String getInfo(); +
+// Добавить реализацию интерфейса в ваш коренной абстрактный класс.+
+//  Переопределить getInfo так, чтобы он возвращал строки:"Я крестьянин", 
+// "Я снайпер" и так далее в зависимости от типа персонажа. +
+// В основном классе создать список и добавить в него 10 случаных персонажей.
+// Пройти по списку и вывести строку возвращаемую getInfo.
+  
 
-import java.sql.Date;
-import java.text.SimpleDateFormat;
-import java.time.LocalDate;
-
-import java.util.logging.Level;//https://javarush.ru/groups/posts/2200-logirovanie-razmotatjh-klubok-stektreysa
-import java.util.logging.Logger;
-
-public class Program {
-    static Logger LOGGER;
-    static { 
-            LOGGER = Logger.getLogger(Program.class.getName());
-    } 
-     
-    private static void printInfo(Product prod) {
-        // LOGGER.log(Level.INFO,prod.getClass().getName());
-        // LOGGER.log(Level.INFO,prod.toString());
-        System.out.println(prod.getClass().getName());
-        System.out.println(prod.toString());
-    }
-
+public class Program { 
     public static void main(String[] args) {
-       
-        Product pr1 = new Product("чепупелли", 200, 300000, "штука");
-        printInfo(pr1);
 
-        ChildrenProduct childProd1 = new ChildrenProduct("корм", 100, 2, "кг", 3, true);
-        printInfo(childProd1);
+        Random rand = new Random();
 
-        Drink drink1 = new Drink("Кола", 30, 1, "л", 1);
-        printInfo(drink1);
-          
-        LocalDate localDate = LocalDate.now();
-        Date date = java.sql.Date.valueOf(localDate);
-        SimpleDateFormat formatter = new SimpleDateFormat("dd-MM-yyyy"); 
+        ArrayList<Human> listHumans = new ArrayList<>();
 
-        FoodStuff foodstuff1 = new FoodStuff("Байкал", 30, 1, "л", formatter.format(date));
-        printInfo(foodstuff1);
+        Fighter fighter1 = new Fighter();        
+        Cleric cleric1 = new Cleric();        
+
+        System.out.println(fighter1.getInfo());
+        System.out.println(cleric1.getInfo());
+ 
+
+        RandomFactoryHuman factory = new RandomFactoryHuman(new humanFactory[]{
+            new Fighter(),
+            new Cleric(),
+            new Cleric(),//клериков вечно не хватало
+            new Arbalester(),
+            new Hawkeye(),
+            new Peasant(),
+            new Warlord(),
+            new Warlock(),
+            new Wizard(),
+            new Rogue()
+            });
+
+        for(int i=0; i<10; i++)
+        {
+            listHumans.add(factory.create());
+            System.out.println(listHumans.get(i).getInfo());            
+        }
+ 
+
+        List<Class<? extends Human>> list1 = new ArrayList<Class<? extends Human>>();
+        list1.add(Fighter.class);
+        list1.add(Cleric.class); 
          
-        HygieneItem hygieneItem1 = new HygieneItem("прокладка", 30, 1, "шт", 20);
-        printInfo(hygieneItem1);
-
-        Lemonade lemonade1 = new Lemonade("колокольчик", 30, 1, "л",1, true);
-        printInfo(lemonade1);
-        
-        Milk milk1 = new Milk("Горбенки", 30, 1, "л",1, 5, 6);
-        printInfo(milk1);
-                        
-        Bread bread1 = new Bread("Черный", 20, 1, "шт", "завтра", "ржаная");
-        printInfo(bread1);
-        
-        Egg egg1 = new Egg("свежие", 20, 1, "шт", "завтра", 10);
-        printInfo(egg1);
-        
-        Mask mask1 = new Mask("синие", 20, 1, "шт", "завтра");
-        printInfo(mask1); 
-
-        ToiletPaper toiletPaper1 = new ToiletPaper("зева", 20, 1, "рулон", 4,3);
-        printInfo(toiletPaper1);
-
-        Diaper diaper1 = new Diaper("подгузник", 20, 1, "щт", 4,5,0,3,"small");
-        printInfo(diaper1);
-        
-        Pacifier pacifier1 = new Pacifier("соска", 20, 1, "шт",1, true);
-        printInfo(pacifier1);
-
-        System.out.println(VM.current().details());
-        System.out.println(ClassLayout.parseClass(ChildrenProduct.class).toPrintable());
-        System.out.println(ClassLayout.parseInstance(childProd1).toPrintable());
-
-
-
-
+       
+ 
     }
 }
 /*
- * >>>
- oop1.Product
-name: чепупелли, price: 200, count: 300000, unit:штука
-oop1.ChildrenProduct
-name: корм, price: 100, count: 2, unit:кг minimumAge: 3, hypoallergenic: true
-oop1.Drink
-name: Кола, price: 30, count: 1, unit:л volume: 1
-oop1.FoodStuff
-name: Байкал, price: 30, count: 1, unit:л expirationDate: 01-10-2022 
-oop1.HygieneItem
-name: прокладка, price: 30, count: 1, unit:шт piecesPackage: 20
-oop1.Lemonade
-name: колокольчик, price: 30, count: 1, unit:л volume: 1  aerated: true
-oop1.Milk
-name: Горбенки, price: 30, count: 1, unit:л volume: 1  fatPercentage: 5, expirationDate: 6
-oop1.Bread
-name: Черный, price: 20, count: 1, unit:шт expirationDate: завтра  flourType: ржаная
-oop1.Egg
-name: свежие, price: 20, count: 1, unit:шт expirationDate: завтра  amountInPackage: 10
-oop1.Mask
-name: синие, price: 20, count: 1, unit:шт expirationDate: завтра
-oop1.ToiletPaper
-name: зева, price: 20, count: 1, unit:рулон piecesPackage: 4 numberLayers: 3
-oop1.Diaper
-name: подгузник, price: 20, count: 1, unit:щт piecesPackage: 4 size: 5 minimumWeight: 0 maximumWeight: 3 type: small
-oop1.Pacifier
-name: соска, price: 20, count: 1, unit:шт minimumAge: 1, hypoallergenic: true
-# WARNING: Unable to get Instrumentation. Dynamic Attach failed. You may add this JAR as -javaagent manually, or supply -Djdk.attach.allowAttachSelf
-# WARNING: Unable to attach Serviceability Agent. sun.jvm.hotspot.memory.Universe.getNarrowOopBase()
-# Running 64-bit HotSpot VM.
-# Using compressed oop with 3-bit shift.
-# Using compressed klass with 3-bit shift.
-# WARNING | Compressed references base/shifts are guessed by the experiment!
-# WARNING | Therefore, computed addresses are just guesses, and ARE NOT RELIABLE.
-# WARNING | Make sure to attach Serviceability Agent to get the reliable addresses.
-# Objects are 8 bytes aligned.
-# Field sizes by type: 4, 1, 1, 2, 2, 4, 4, 8, 8 [bytes]
-# Array element sizes: 4, 1, 1, 2, 2, 4, 4, 8, 8 [bytes]
-
-oop1.ChildrenProduct object internals:
-OFF  SZ                TYPE DESCRIPTION                      VALUE
-  0   8                     (object header: mark)            N/A
-  8   4                     (object header: class)           N/A
- 12   4                 int Product.price                    N/A
- 16   4                 int Product.count                    N/A
- 20   4    java.lang.String Product.name                     N/A
- 24   4    java.lang.String Product.unit                     N/A
- 28   4                 int ChildrenProduct.minimumAge       N/A
- 32   4   java.lang.Boolean ChildrenProduct.hypoallergenic   N/A
- 36   4                     (object alignment gap)
-Instance size: 40 bytes
-Space losses: 0 bytes internal + 4 bytes external = 4 bytes total
-
-oop1.ChildrenProduct object internals:
-OFF  SZ                TYPE DESCRIPTION                      VALUE
-  0   8                     (object header: mark)            0x0000000000000001 (non-biasable; age: 0)
-  8   4                     (object header: class)           0x01000bf0
- 12   4                 int Product.price                    100
- 16   4                 int Product.count                    2
- 20   4    java.lang.String Product.name                     (object)
- 24   4    java.lang.String Product.unit                     (object)
- 28   4                 int ChildrenProduct.minimumAge       3
- 32   4   java.lang.Boolean ChildrenProduct.hypoallergenic   true
- 36   4                     (object alignment gap)
-Instance size: 40 bytes
-Space losses: 0 bytes internal + 4 bytes external = 4 bytes total
- 
+ * >>> 
+     Qhorin Halfhand          Fighter - hp: 300  Mana:   150  armor:    14 damage:    33
+   Rhaegar Targaryen           Cleric - hp: 200  Mana:   650  armor:     5 damage:    10
+         Sansa Stark          Warlock - hp: 200  Mana:   550  armor:     5 damage:    10
+    Tommen Baratheon          Warlord - hp: 300  Mana:   150  armor:    49 damage:    33
+   Rhaegar Targaryen          Hawkeye - hp: 400  Mana:   310  armor:    20 damage:    53
+         Syrio Forel          Peasant - hp: 200  Mana:    50  armor:     0 damage:     0
+   Rhaegar Targaryen          Fighter - hp: 300  Mana:   150  armor:    14 damage:    33
+       Samwell Tarly           Wizard - hp: 200  Mana:   450  armor:     5 damage:    10
+    Tommen Baratheon           Cleric - hp: 200  Mana:   650  armor:     5 damage:    10
+     Qhorin Halfhand          Peasant - hp: 200  Mana:    50  armor:     0 damage:     0
+      Sandor Clegane           Cleric - hp: 200  Mana:   650  armor:     5 damage:    10
+                 Pyp            Rogue - hp: 200  Mana:   260  armor:     3 damage:    25
  */
+
+
+
+
+
+
+
+
+
+
+
+
+    /*
+            Class[] cArg = new Class[2];
+            cArg[0] = Double.class;
+            cArg[1] = Long.class;
+            Constructor ct = c.getDeclaredConstructor(cArg);
+            System.out.println("Constructor = " + ct.toString()); 
+    */ 
+
+
+  /*  рефлексия не пошла 
+        Class[] parameterType = null;
+        List<Human> classes = Arrays.asList(Fighter.class, Cleric.class); 
+        for (Human clazz : classes) {            
+            Constructor ct = clazz.getDeclaredConstructor(parameterType);
+            Object instance = clazz.getDeclaredConstructor(parameterType).newInstance() ;
+        }    
+        for (Class<? extends Human> hum : list1) {  
+            
+        //  можем извелкать конструкторы!
+        System.out.println(Fighter.class.getConstructors()[0]);//public oop_lab2.Fighter()
+        System.out.println(Fighter.class.getConstructors()[1]);//public oop_lab2.Fighter(java.lang.String)
+        System.out.println(Fighter.class.getConstructors()[2]);//public oop_lab2.Fighter(int,int,int,int,java.lang.String)
+
+        // Constructor constructor = clazz.getConstructors()[0];
+        Constructor constructor = Fighter.class.getConstructors()[0];
+        constructor.setAccessible(true);
+        final Fighter instance = (Fighter)constructor.newInstance(null);
+
+        Class[] cArg = new Class[1];
+        cArg[0] = null;
+        Object instance0 = list1.get(0).getDeclaredConstructor(cArg).newInstance(); 
+        */
